--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,24 @@
-/* Experience */
-.project-exp{
-  background-color: #f7f5ec;
+/*
+#  ·················
+#  ··_______________
+#  ·/·___/·___/·___/
+#  /·/__(__··|__··)·
+#  \___/____/____/··
+#  ·················
+*/
+:root{
+  /*------ Colores */
+  --coffee-color: #604734;
+  --black-color: #313337;
+  --white-color: #f7f5ec;
+  --grey-color: grey;
+  --red-color: #E3001B;
 }
-.titulo-exp{
+
+.project-exp{
+  background-color: var(--white-color); 
+}
+.title-exp{
   display: inline-flex;
   justify-items: center;
   font-family: "Roboto",sans-serif;
@@ -12,7 +28,7 @@
 
 .project-exp-details{
   padding: 20px 0 40px;
-  background-color: #f7f5ec;
+  background-color: var(--white-color); 
   text-align: center;
   overflow: hidden;
   position: relative;
@@ -35,16 +51,15 @@
 }
 
 .project-exp-details:hover .picture img {
-  box-shadow: 0 0 0 14px #f7f5ec;
+  box-shadow: 0 0 0 14px var(--white-color); 
   transform: scale(0.7);
 }
 
-.price {
-  color: grey;
+.text-exp {
+  color:var(--grey-color); 
   font-size: 22px;
 }
 
-/* Experience */
 @font-face {
   font-family: 'icomoon';
   src:  url('../fonts/icomoon.eot?6wtfwt');
@@ -104,7 +119,7 @@ body {
 }
 
 .header{
-  background-color: white;
+  background-color: var(--white-color); 
   height: 52px;
   display: flex;
   align-items: center;
@@ -122,8 +137,8 @@ body {
 }
 
 .navbar {
-  background-color: #604734;
-  color: white;
+  background-color:  var(--coffee-color); 
+  color: var(--white-color); 
   display: flex;
   height: 52px;
   align-items: center;
@@ -132,7 +147,7 @@ body {
 }
 
 .navbar a {
-  color: white;
+  color: var(--white-color); 
   text-decoration: none;
   font-family: "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
@@ -152,6 +167,10 @@ body {
   padding: 0 10px;
 }
 
+nav a:hover{
+  color: var(--red-color); 
+}
+
 ol,
 ul {
   margin: 0;
@@ -162,14 +181,13 @@ ul {
 .project {
   /* margin-bottom: 15px; */
   padding: 20px;
-  background: white;
+  background: var(--white-color); 
   display: flex;
   /* height: 400px; */
   font-family: "Roboto",sans-serif;
 }
 .project-description {
   font-size: 16px;
-  color: #202020;
   font-family: "Roboto",sans-serif;
 }
 
@@ -208,7 +226,7 @@ h4{
   /* height: 35px;
   margin-left: 20px; */
   padding: 0px 20px;
-  background-color: #604734;
+  background-color: var(--coffee-color); 
 }
 
 .social-link {
@@ -258,132 +276,3 @@ h4{
   color: white;
 }
 
-
-@media screen and (max-width: 768px){
-  .navbar {
-    display: block;
-    height: auto;
-  }
-  .navbar ol {
-    display: block;
-  }
-  .navbar ol li {
-    height: 50px;
-  }
-  .navbar a {
-    justify-content: center;
-    height: 40px;
-    font-size: 2em;
-    margin-bottom: .5em;
-  }
-
-  .navbar a:hover {
-    justify-content: center;
-    height: 40px;
-    font-size: 2em;
-    text-decoration: underline;
-    margin-bottom: .5em;
-  }
-  .navbar .logo {
-    text-align: center;
-  }
-
-  .menu {
-    position: fixed;
-    background: rgb(96, 71, 52, .9); 
-    z-index: 3;
-    top: 0;
-    right: -100vw;
-    width: 100vw;
-    /* height: 100vh; */
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: .3s;
-  }
-  .menu.is-active {
-    right: 0;
-  }
-
-  .burger-button {
-    display: block;
-  }
-
-}
-
-@media screen and (max-width: 635px){
-  .project{
-    display: block;
-  }
-  .project-imageContainer {
-    width: 100%;
-    padding-right: initial;
-  }
-  .project-details{
-    width: auto;
-    /* font-size: 16px; */
-  }
-  .img-perfil {
-    width: 100%;
-    max-width: 600px;
-    max-height: 510px;
-    height: 100%;
-  }
-
-  .home{
-      margin-top: 0;
-    }
-}
-
-
-@media screen and (max-width: 425px){
-  .home{
-    margin-top: 0;
-  }
-  .project{
-    display: block;
-    padding: 10px;
-  }
-  .project-imageContainer {
-    width: 100%;
-    padding-right: initial;
-  }
-
-  .img-perfil{
-    width: 100%;
-    max-width:500px;
-    max-height:315px;
-    height: 100%;
-  }
-
-  .project-details{
-    width: auto;
-    /* font-size: 16px; */
-  }
-
-  .parrafo{
-    margin: 0px 20px;
-  }
-
-  h1{
-    font-size: 1.5em;
-  }
-  
-  .home{
-    margin-top: 3%;
-  }
-
-}
-
-@media screen and (max-width: 425px){
-  .home{
-    margin-top: 0;
-  }
-
-  .project-title {
-    font-size: 23px;
-    margin-top: 0;
-}
-
-}
