--- a/css/estilos.css
+++ b/css/estilos.css
@@ -127,7 +127,7 @@ body {
   font-family: "Roboto",sans-serif;
 }
 .img-logo{
-  padding: 2px 10px;
+  padding: 2px 5px;
   display: flex;
 }
 
@@ -153,6 +153,10 @@ body {
   font-weight: bold;
 }
 
+.link{
+  padding: 0 10px;
+}
+
 .navbar ol {
   display: flex;
   height: inherit;
@@ -164,7 +168,6 @@ body {
   display: flex;
   align-items: center;
   height: inherit;
-  padding: 0 10px;
 }
 
 nav a:hover{
@@ -262,17 +265,17 @@ h4{
 }
 
 .burger-button {
-  width: 38px;
-  height: 38px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   background-color: rgba(0, 0, 0, .8);
   display: none;
-  line-height: 38px;
+  line-height: 35px;
   text-align: center;/* hasta aca nos sigue*/
   position: fixed; /* con esto no nos sigue */
   z-index: 4; /* cuando pasa por debajo*/
   right: 5px;
-  top: 53px;
+  top: 55px;
   color: white;
 }
 
